tests/failing/type_def_mutually_recursive.tails
type A = B
type B = A

func tests() -> unit:
  pass
